# UR3e-Control

install/: local_setup.sh  setup.sh
install/ur/share/ur/: package.sh
install/ur/share/ur/cmake/: urConfig.cmake
install/ur3e_2fg7_description/share/ament_index/resource_index/package_run_dependencies/: ur3e_2fg7_description
install/ur3e_2fg7_description/share/ur3e_2fg7_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur3e_2fg7_description/share/ur3e_2fg7_description/cmake/: ur3e_2fg7_descriptionConfig.cmake
install/ur3e_2fg7_description/share/ur3e_2fg7_description/launch/: display.launch.py
install/ur3e_2fg7_description/share/ur3e_2fg7_description/urdf/: ur3e_2fg7.urdf
install/ur_calibration/lib/ur_calibration/: calibration_correction
install/ur_calibration/share/ur_calibration/: package.sh
install/ur_controllers/share/ur_controllers/: package.sh
install/ur_dashboard_msgs/include/ur_dashboard_msgs/ur_dashboard_msgs/srv/detail/: get_program_state__description.c
install/ur_dashboard_msgs/share/ur_dashboard_msgs/: local_setup.sh  package.sh
install/ur_moveit_config/share/ur_moveit_config/: local_setup.sh  package.sh
install/ur_robot_driver/share/ur_robot_driver/: local_setup.sh  package.sh
install/ur_robotiq/share/ur_robotiq/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ur_robotiq/share/ur_robotiq/cmake/: ur_robotiqConfig.cmake
install/ur_robotiq_description/share/ur_robotiq_description/: package.sh
install/ur_robotiq_description/share/ur_robotiq_description/urdf/: onrobot_2fg7_upload_urdf.xacro  onrobot_2fg7_urdf.xacro
log/: latest_build
src/hello_moveit/: package.xml
src/hello_moveit/src/: hello_moveit.cpp
src/ur3e_2fg7_description/: CMakeLists.txt
src/ur3e_2fg7_description/rviz/: ur3e_2fg7.rviz
src/ur_custom/ur_custom/: CMakeLists.txt  README.md  package.xml
src/ur_custom/ur_custom_bringup/: CMakeLists.txt  package.xml
src/ur_custom/ur_custom_bringup/scripts/: start_control_1.sh  start_control_2.sh  start_control_3.sh  start_control_4.sh  ur_custom_gazebo.sh  ur_custom_gazebo_and_moveit.sh  ur_custom_moveit.sh  ur_custom_real_control.sh
src/ur_custom/ur_custom_description/: CMakeLists.txt  package.xml
src/ur_custom/ur_custom_description/config/: ur3e_controllers.yaml
src/ur_custom/ur_custom_description/launch/: RViz.launch.py  gazebo_sdf.launch.py  robot_state_publisher.launch.py
src/ur_custom/ur_custom_description/rviz/: urdf.rviz
src/ur_custom/ur_custom_description/sdf/: world.sdf
src/ur_custom/ur_custom_description/sdf_src/: ur3e_onrobot_2fg7.sdf  ur3e_onrobot_2fg7.urdf  world.sdf
src/ur_custom/ur_custom_description/srdf/: ur3e_with_gripper_camera.srdf.xacro
src/ur_custom/ur_custom_description/urdf/: onrobot_2fg7_urdf.xacro  realsense_L515_urdf.xacro  ur3e_onrobot_2fg7_urdf.xacro  ur3e_robotiq_2f_85_urdf.xacro  ur3e_urdf.xacro  ur3e_with_gripper_camera.urdf.xacro
src/ur_custom/ur_custom_description/urdf/control/: gazebo_sim_ros2_control.urdf.xacro  ur_custom_ros2_control.urdf.xacro
src/ur_custom/ur_custom_description/urdf/mech/: adaptive_gripper.urdf.xacro  g_shape_base_v2_0.urdf.xacro  gripper.urdf.xacro  onrobot_2fg7_urdf.xacro  ur3e_arm.urdf.xacro  ur3e_urdf.xacro
src/ur_custom/ur_custom_description/urdf/robots/: ur3e_2fg7_l515.urdf.xacro  ur3e_onrobot_2fg7_urdf.xacro  ur3e_robotiq_2f_85_urdf.xacro
src/ur_custom/ur_custom_description/urdf/sensors/: camera.urdf.xacro  intel_rgbd_cam_l515.urdf.xacro  realsense_L515_urdf.xacro
src/ur_custom/ur_custom_description/urdf_old/mech/: robotiq_2f_85_urdf.xacro  ur3e_urdf.xacro
src/ur_custom/ur_custom_description/urdf_old/robots/: ur3e_2f85_l515.xacro
src/ur_custom/ur_custom_driver/: CMakeLists.txt  package.xml
src/ur_custom/ur_custom_driver/config/: goal_publishers_config.yaml
src/ur_custom/ur_custom_driver/launch/: choice_fk.launch.py  choice_ik_0.launch.py  choice_ik_1.launch.py  choice_ik_2.launch.py  choice_ik_3.launch.py  choice_ik_4.launch.py  choice_point_ik.launch.py  choice_point_ik_improved.launch.py  scaled_joint_trajectory_controller.launch.py  ur_custom_moveit.launch.py  ur_custom_rsp.launch.py
src/ur_custom/ur_custom_driver/scripts/: onrobot_methods.py
src/ur_custom/ur_custom_gazebo/: CMakeLists.txt  package.xml
src/ur_custom/ur_custom_gazebo/config/: ros_gz_bridge.yaml
src/ur_custom/ur_custom_gazebo/launch/: ur_custom.gazebo.launch.py
src/ur_custom/ur_custom_gazebo/models/red_cylinder/: model.config
src/ur_custom/ur_custom_gazebo/worlds/: empty.world  pick_and_place_demo.world
src/ur_custom/ur_custom_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/ur_custom/ur_custom_moveit/config/: joint_limits.yaml  ompl_planning.yaml  pilz_industrial_motion_planner_planning.yaml  stomp_planning.yaml  ur3e_onrobot_2fg7.srdf
src/ur_custom/ur_custom_moveit/config/ur3e_2fg7_l515/: joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ros2_controllers_template.yaml  ur3e_2fg7_l515.srdf
src/ur_custom/ur_custom_moveit/launch/: demo.launch.py  load_ros2_controllers.launch.py  move.launch.py  move_group.launch.py  robot_state_publisher.launch.py
src/ur_robotiq/ur_robotiq/: package.xml
src/ur_robotiq/ur_robotiq_description/: CMakeLists.txt
src/ur_robotiq/ur_robotiq_description/urdf/: onrobot_2fg7_upload_urdf.xacro  onrobot_2fg7_urdf.xacro  realsense_L515_urdf.xacro  robotiq_2f_85_urdf.xacro  ur3e_onrobot_2fg7_urdf.xacro  ur3e_robotiq_2f_85_urdf.xacro
