<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_custom</name>
  <version>0.0.0</version>
  <description>Combines URxe robotic arms made by Universal Robots with a gripper and camera (metapackage).</description>
  <maintainer email="jonur@stud.ntnu.no">jon</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ur_custom_bringup</exec_depend>
  <exec_depend>ur_custom_description</exec_depend>
  <exec_depend>ur_custom_gazebo</exec_depend>
  <exec_depend>ur_custom_moveit</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
