<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_custom_bringup</name>
  <version>0.0.0</version>
  <description>Launch files and basic nodes for starting ur3e robot drivers and capabilities</description>
  <maintainer email="jonur@stud.ntnu.no">jon</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ur_robot_driver</depend>
  <depend>ur_moveit_config</depend>
  <depend>ur_custom_description</depend>
  <depend>ur_custom_driver</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
