<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_custom_driver</name>
  <version>0.0.0</version>
  <description>Testing to send point to ur robot driver</description>
  <maintainer email="jonur@stud.ntnu.no">jon</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ur_robot_driver</depend>
  <depend>ur_moveit_config</depend>
  <depend>moveit_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>std_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>rclpy</depend>
  <depend>xacro</depend>
  <depend>moveit_py</depend>
  <depend>moveit_configs_utils</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
